--- a/ElevenTestGround/Base.lproj/Main.storyboard
+++ b/ElevenTestGround/Base.lproj/Main.storyboard
@@ -124,6 +124,7 @@
                                 </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="Zpe-fS-ESL" appends="YES" id="W09-6R-pGZ"/>
+                                    <outletCollection property="gestureRecognizers" destination="0xO-4s-sqW" appends="YES" id="b3K-My-GYo"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -151,7 +152,10 @@
                     <connections>
                         <outlet property="commentsActionLabel" destination="TEL-ne-QRp" id="qqt-Pl-6So"/>
                         <outlet property="commentsHeaderLabel" destination="MkZ-l8-xRx" id="sER-Rs-dQu"/>
+                        <outlet property="commentsView" destination="ax6-94-vIb" id="m4r-4Y-NcW"/>
                         <outlet property="expandedConstraint" destination="NAk-b3-M5W" id="HP6-KL-PIv"/>
+                        <outlet property="panGestureRecognizer" destination="0xO-4s-sqW" id="D1N-v4-Md1"/>
+                        <outlet property="photoImageView" destination="vXX-Ld-Vss" id="BgD-IR-8fO"/>
                         <outlet property="tapGestureRecognizer" destination="Zpe-fS-ESL" id="Qo4-X7-DpU"/>
                     </connections>
                 </viewController>
@@ -161,6 +165,11 @@
                         <action selector="tappedCommentsSection:" destination="JEX-9P-axG" id="Rmq-hf-q7A"/>
                     </connections>
                 </tapGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="0xO-4s-sqW">
+                    <connections>
+                        <action selector="pannedCommentsSection:" destination="JEX-9P-axG" id="Lio-rL-z0Y"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="709" y="129"/>
         </scene>
